--- a/DiplomWeb/DiplomWeb/Views/UserVigils/Index.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/UserVigils/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "ViewCalendar";
+    ViewBag.Title = "Дежурства";
 }
 @section Styles{
-@Styles.Render("~/Content/calendar")
+    @Styles.Render("~/Content/calendar")
 }
 <h2>ViewCalendar</h2>
 
@@ -16,14 +16,13 @@
 <div class="modal fade" id="ModalAdd" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form class="form-horizontal" id="addEvent"  method="POST" action="@Url.Action("SaveDate")">
+            <form class="form-horizontal" id="addEvent" method="POST" action="@Url.Action("SaveDate")">
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Add Event</h4>
                 </div>
                 <div class="modal-body">
-
                     <div class="form-group">
                         <label for="title" class="col-sm-2 control-label">Title</label>
                         <div class="col-sm-10">
@@ -47,11 +46,20 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="start" class="col-sm-2 control-label">Дежурство</label>
+                        <div class="col-sm-10">
+                            @Html.DropDownList("vigilId", ViewBag.VigilId as SelectList,
+                            htmlAttributes: new { @class = "form-control" })
+                        </div>
+                    </div>
+                   
+                    <div class="form-group">
                         <label for="start" class="col-sm-2 control-label">Start date</label>
                         <div class="col-sm-10">
                             <input type="text" name="startAt" class="form-control" id="start" readonly>
                         </div>
                     </div>
+                   
                     <div class="form-group">
                         <label for="end" class="col-sm-2 control-label">End date</label>
                         <div class="col-sm-10">
@@ -106,7 +114,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                           <a id="DeleteLink" href="/RecordVigils/DeleteEvent/">Delete</a>
+                            <a id="DeleteLink" href="@Url.Action("DeleteEvent")">Delete</a>
                         </div>
                     </div>
 
@@ -116,7 +124,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default closing" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" >Save changes</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
@@ -125,5 +133,5 @@
 
 
 @section Scripts{
-    @Scripts.Render("~/bundles/calendar")    
+    @Scripts.Render("~/bundles/calendar")
 }
