--- a/DiplomWeb/DiplomWeb/Views/Holidays/List.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Holidays/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DiplomWeb.Models.ApplicationUser>
+﻿@model IEnumerable<DiplomWeb.Models.Holiday>
 
 @{
     ViewBag.Title = "Index";
@@ -11,30 +11,28 @@
 </p>
 <table class="table">
     <tr>
-
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.DateStart)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayNameFor(model => model.DataFinal)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.Status)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-
         <td>
-            @Html.DisplayFor(modelItem => item.Email)
+            @Html.DisplayFor(modelItem => item.DateStart)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
+            @Html.DisplayFor(modelItem => item.DataFinal)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.UserName)
+            @Html.DisplayFor(modelItem => item.Status)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
