--- a/DiplomWeb/DiplomWeb/Views/Shared/_Layout.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Shared/_Layout.cshtml
@@ -37,8 +37,8 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
+        <footer class="hidden-print">
+            <p></p>
         </footer>
     </div>
 
