--- a/DiplomWeb/DiplomWeb/Views/Projects/Create.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Projects/Create.cshtml
@@ -1,12 +1,5 @@
 ﻿@model DiplomWeb.Models.Project
 
-@{
-    ViewBag.Title = "Create";
-}
-
-<h2>Create</h2>
-
-
 @using (Html.BeginForm("Create","Projects",FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
@@ -57,7 +50,7 @@
         </div>
         <div class="form-group">
             <div style="position:relative;">
-                <label>Картинка</label>
+                <label>Файлы</label>
                 <a class='btn' href='javascript:;'>
                     Выберите файл...
                     <input type="file" id="fileUploader" multiple class="form-control"  name="files" size="40"
@@ -95,15 +88,24 @@
             </div>
         </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-@Scripts.Render("~/bundles/jqueryval")
-@Scripts.Render("~/bundles/tinymce")
-@Scripts.Render("~/bundles/scripts")
+<script>
+    $("#fileUploader").change(function () {
+        var files = $(this)[0].files;
+        for (var i = 0; i < files.length; i++) {
+            $("#upload-file-info").append("<span class='label label-info' style='margin-left:10px' >" + files[i].name + "</span>");
+        }
+    });
 
+    var i = 0;
+    $('.addLink').click(function () {
+        i++;
+        var html2Add = "<div><input type='text' class = 'form-control' required name='groups' style='display:inline'/><a class='del_group'>x</a></div>";
+
+        $('#addGroup').append(html2Add);
+    })
+    $('#addGroup').on('click', '.del_group', function (e) {
+        $(this).parent().remove();
+    });
+</script>
 }
