--- a/DiplomWeb/DiplomWeb/Views/Projects/Index.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Projects/Index.cshtml
@@ -10,7 +10,8 @@
     <ul>
         @foreach (ProjectInfo item in Model)
         {
-            <li>@Html.ActionLink(item.Name, "Details", new { id = item.Id }) </li>
+           
+            <li>@Html.RouteLink(item.Name, "Project", new { id = item.Id }) </li>
         }
     </ul>
 </dib>
