--- a/DiplomWeb/DiplomWeb/Views/Manage/Edit.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Manage/Edit.cshtml
@@ -29,6 +29,13 @@
                 @Html.ValidationMessageFor(model => model.SecondName, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Patronymic, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Patronymic, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.EmailNotifications, htmlAttributes: new { @class = "control-label col-md-2" })
