--- a/DiplomWeb/DiplomWeb/Views/Vigils/Create.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Vigils/Create.cshtml
@@ -14,6 +14,8 @@
         <h4>Vigil</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+       
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -21,15 +23,23 @@
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.ApplicationRoleID, "ApplicationRoleID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ApplicationRoleID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ApplicationRoleID, "", new { @class = "text-danger" })
-            </div>
+            <h5>Дни недели</h5>
+            @Html.CheckBox("days", false, new { value = "1", id = "monday" })
+            @Html.Label("monday", "Понедельник", new { @for = "monday" })
+            @Html.CheckBox("days", false, new { value = "2", id = "tuesday" })
+            @Html.Label("tuesday", "Вторник", new { @for = "tuesday" })
+            @Html.CheckBox("days", false, new { value = "3", id = "wednesday" })
+            @Html.Label("wednesday", "Среда", new { @for = "wednesday" })
+            @Html.CheckBox("days", false, new { value = "4", id = "thursday" })
+            @Html.Label("thursday", "Четверг", new { @for = "thursday" })
+            @Html.CheckBox("days", false, new { value = "5", id = "friday" })
+            @Html.Label("friday", "Пятница", new { @for = "friday" })
+            @Html.CheckBox("days", false, new { value = "6", id = "saturday" })
+            @Html.Label("saturday", "Субота", new { @for = "saturday" })
+            @Html.CheckBox("days", false, new { value = "7", id = "sunday" })
+            @Html.Label("sunday", "Воскресение", new { @for = "sunday" })
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
