--- a/DiplomWeb/DiplomWeb/Views/Vigils/Details.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Vigils/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ApplicationRole.Name)
+            @Html.DisplayNameFor(model => model.Days)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ApplicationRole.Name)
+            @Html.DisplayFor(model => model.Days)
         </dd>
 
         <dt>
