--- a/DiplomWeb/DiplomWeb/Views/Vigils/Index.cshtml
+++ b/DiplomWeb/DiplomWeb/Views/Vigils/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ApplicationRole.Name)
+            @Html.DisplayNameFor(model => model.Days)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -23,7 +23,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.ApplicationRole.Name)
+            @Html.DisplayFor(modelItem => item.Days)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
